--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -29,8 +29,8 @@
         <div class="card mb-3" style="max-width: 720px;">
             <div class="card-body">
                 Difficulty: <span class="badge bg-secondary">{{ objective.difficulty }}</span><br>
-                Hints can be supplied by: {{ objective.supported_by }}<br>
-                Requires an item: {{ objective.requires }}<br>
+                Following character can give hints: {{ objective.supported_by }}<br>
+                Requires following item: {{ objective.requires }}<br>
                 URL: {{ objective.objective_url }}
             </div>
         </div>
