Add password reset

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,6 +107,7 @@
                                 Not logged in.
                             {% endif %}
                             <br>
+                            <a class="link-dark" href="{{ url_for('show_password')}}">Reset password</a><br>
                             <a class="link-dark" href="{{ url_for('show_release')}}">Version: {{ version }}</a>
                         </h6>
                     </div>
