Add password reset

--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -11,7 +11,7 @@
 
         {# Display form and possible error message - reset password #}
         <h4 class="mb-3">Set new password</h4>
-        <form action="{{ url_for('show_password_reset') }}" method="POST">
+        <form action="{{ url_for('show_password_reset', random_hash=random_hash) }}" method="POST">
             {{ form.csrf_token }}
             <div class="form-group mt-2 mb-2">
                 <label for="password">{{ form.password.label }}</label>
