Add password reset

--- a/templates/storage.html
+++ b/templates/storage.html
@@ -167,7 +167,7 @@
             </div>
         </div>
 
-        <input class="form-control mb-3" id="myInput" type="text" placeholder="Search..">
+        <input class="form-control mb-3" id="myInput" type="text" aria-label="Search " placeholder="Search..">
 
         <div class="card">
             <div class="card-body">
