--- a/templates/release.html
+++ b/templates/release.html
@@ -21,6 +21,8 @@
         {#  Show release information #}
         <div class="card">
             <div class="card-body">
+                <h4 class="mb-3">v1.1 (20221202)</h4>
+                New Feature: Password reset, turn on/off mail notifications<br><br>
                 <h4 class="mb-3">v1.0 (20220718)</h4>
                 Some improvements and first stable release<br><br>
                 <h4 class="mb-3">v0.6 (20220708)</h4>
