--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -13,7 +13,7 @@
         <div class="card mb-3" style="max-width: 720px;">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="{{ s3_prefix + "/" + creator.creator_img if (creator.creator_img!='') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="Creator Image">
+                    <img src="{{ s3_prefix + "/" + creator.creator_img if (creator.creator_img!='NoImage') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="Creator Image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
