--- a/templates/solution_my_detail.html
+++ b/templates/solution_my_detail.html
@@ -50,7 +50,7 @@
             </ul>
         </div>
         {% for item in contents %}
-            <div id="{{ item }}" style="font-size:0;">![{{ item }}](https://s3.kringle.info:9000/kringle-public/{{ section_name }}/{{ folder_name }}/{{ item }})</div>
+            <div id="{{ item }}" style="font-size:0;">![{{ item }}](https://www.kringle.info/kringle-public/{{ section_name }}/{{ folder_name }}/{{ item }})</div>
         {% endfor %}
 
         <hr class="little mt-4 mb-4">
